2005-10-20  Lluis Sanchez Gual  <lluis@novell.com>
	
	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs: Create the solution
	in the same folder as the project. Fixes bug #60314. 
	
2005-10-19  Lluis Sanchez Gual  <lluis@novell.com>
	
	* MonoDevelop.Ide.Gui/Ide.cs: Execute auto-start commands.
	
	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Commands/ToolsCommands.cs: Added command
	for showing the Add-in manager.
	
	* Makefile.am:
	* MonoDevelop.Ide/MonoDevelop.Ide.mdp: Added new files.
	
	* MonoDevelop.Ide.Gui/DefaultStatusBarService.cs:
	* MonoDevelop.Ide.Gui/IStatusBarService.cs:
	* MonoDevelop.Ide.Gui/IStatusIcon.cs:
	* MonoDevelop.Ide.Gui/BackgroundProgressMonitor.cs:
	* MonoDevelop.Ide.Gui/SdStatusBar.cs:
	Icons are now hiden by calling Dispose.
	Added SetAlarmMode to make icons blink in the status bar.
	Use Pixbuf insted of Image for icons.
	
	* MonoDevelop.Ide.Gui/AddinUpdateHandler.cs: New auto-start
	handler that checks for add-in updates.

2005-10-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/FolderNodeBuilder.cs:
	When moving or copying a file that is open and modified in
	the text editor, ask whether it should be saved or not.
	Fixes bug #76209.

2005-10-13  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: In CreateCombineEntry,
	only open the combine if we are creating a root combine.

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.addin.xml: Fixed incorrect class name.

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Ide.addin.xml: Fixed addin header information.
	Use "id" attribuet instead of "name" to identify addins.
	* MonoDevelop.Ide.Gui/IdeStartup.cs: MessageService is now registered
	in the config file.

2005-10-10  John Luke  <john.luke@gmail.com> 

	* MonoDevelop.Ide.Gui/IdeStartup.cs: remove call to
	Gdk.Threads.Init
	
2005-10-04  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: