@@ -1,3 +1,11 @@
+2005-10-20  Lluis Sanchez Gual  <lluis@novell.com> 
+	
+	* MonoDevelop.Ide.Commands/ProjectCommands.cs:
+	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceNodeBuilder.cs:
+	* MonoDevelop.Ide.addin.xml:
+	Added LocalCopyReference command for toggling the Local Copy property
+	of references. Fixes bug #75409.
+	
 2005-10-20  Lluis Sanchez Gual  <lluis@novell.com>
 	
 	* MonoDevelop.Ide.Gui.Dialogs/NewProjectDialog.cs: Create the solution
